--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,10 +9,11 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
+      <h5>Note: This is not a realtime overview</h5>
       <h1 class="page-header">Top100:</h1>
       <table class="table table-striped table-bordered">
         <tr>
-          <th>#</th><th>Camper name</th><th>Basejumps</th><th>Ziplines</th><th>Total Points</th><th>Bonfires</th><th>Waypoints</th>
+          <th>#</th><th>Camper name</th><th>Basejumps</th><th>Ziplines</th><th>Points</th><th>Total</th><th>Bonfires</th><th>Waypoints</th>
         </tr>
         <tr class="top100" ng-repeat="camper in campers">
           <td>{{$index+1}}</td>
@@ -21,8 +22,12 @@
           <td class="count">{{camper.basejumps}}</td>
           <td class="count">{{camper.ziplines}}</td>
           <td class="count">{{camper.points}}</td>
+          <td class="count">{{camper.total}}</td>
           <td class="count">{{camper.bonfires}}</td>
           <td class="count">{{camper.waypoints}}</td>
+        </tr>
+        <tr>
+          <td colspan="8">(A Basejump counts for 50 points and a Zipline for 20)</td>
         </tr>
       </table>
     </div>
@@ -31,6 +36,6 @@
 
 <footer class="footer">
   <div class="container">
-      <p>By <a href="http://www.freecodecamp.com/roelver">@roelver</a> | Updated: 10 oct 2015</p>
+      <p>By <a href="http://www.freecodecamp.com/roelver">@roelver</a> | Updated: 8 oct 2015</p>
   </div>
 </footer>
