--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,11 +9,11 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h5>Note: This is not a realtime overview</h5>
+      <h5>Note: These are not realtime results</h5>
       <h1 class="page-header">Top100:</h1>
       <table class="table table-striped table-bordered">
         <tr>
-          <th>#</th><th>Camper name</th><th>Basejumps (x50)</th><th>Ziplines (x20)</th><th>Points</th><th>Total score</th><th>Bonfires</th><th>Waypoints</th>
+          <th>#</th><th>Camper name</th><th>Basejumps (x50)</th><th>Ziplines (x20)</th><th>Points</th><th>Total score</th><th>Bonfires</th><th>Waypoints</th><th class="lastchecked">Last checked</th>
         </tr>
         <tr class="top100" ng-repeat="camper in campers">
           <td>{{$index+1}}</td>
@@ -25,10 +25,13 @@
           <td class="count">{{camper.total}}</td>
           <td class="count">{{camper.bonfires}}</td>
           <td class="count">{{camper.waypoints}}</td>
+          <td class="lastchecked">{{camper.lastUpdate | date:'yyyy-MM-dd HH:mm:ss'}}</td>
         </tr>
       </table>
       <p class="disclaimer">
-          This list is assembled by taking a list of users from the <a href="https://gitter.im/FreeCodeCamp/FreeCodeCamp">FreeCodeCamp chat</a> and screen scraping the user's detail pages from the FreeCodeCamp site. This list is updated every couple of days. It is not a realtime presentation of user scores on FreeCodeCamp.com.<br/> The list is ordered by descending total score. This score is calculated by increasing the Points with Basejump * 50 and Ziplines * 20.
+          This list is assembled by taking a list of users from the <a href="https://gitter.im/FreeCodeCamp/FreeCodeCamp">FreeCodeCamp chat</a> and screen scraping the user's detail pages from the FreeCodeCamp site. This list is updated every couple of days. It is not a realtime presentation of user scores on FreeCodeCamp.com.<br/> 
+          The list is ordered by descending total score. This score is calculated as 
+          <em>Points + (Basejumps * 50) + (Ziplines * 20)</em>.
        </p>
 
     </div>
