--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,7 +2,7 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <img class="fcclogo" src="https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg" alt="FreeCodeCamp logo">
-    <h1>Highscores</h1>
+    <h1>(unofficial) Leaderboard</h1>
   </div>
 </header>
 
