--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -13,11 +13,11 @@
       <h1 class="page-header">Top100:</h1>
       <table class="table table-striped table-bordered">
         <tr>
-          <th>#</th><th>Camper name</th><th>Total score</th><th>Points</th><th>Basejumps (x60)</th><th>Ziplines (x30)</th><th>Bonfires (x3)</th><th>Waypoints</th><th class="lastchecked">Last checked</th>
+          <th>#</th><th>Camper name</th><th>Total score</th><th>Points</th><th>Basejumps (x60)</th><th>Ziplines (x30)</th><th>Bonfires (x3)</th><th>Waypoints</th><th class="lastchecked">Last checked</th><th></th>
         </tr>
         <tr class="top100" ng-repeat="camper in campers">
           <td>{{$index+1}}</td>
-          <td><a href="http://www.freecodecamp.com/{{camper.username}}"><img ng-src="{{camper.img}}" class="userimg"/>
+          <td><a name="{{camper.username}}" href="http://www.freecodecamp.com/{{camper.username}}"><img ng-src="{{camper.img}}" class="userimg"/>
           <span class="user-name">{{camper.username}}</span></a></td>
           <td class="count">{{camper.total}}</td>
           <td class="count">{{camper.points}}</td>
@@ -26,6 +26,7 @@
           <td class="count">{{camper.bonfires}}</td>
           <td class="count">{{camper.waypoints}}</td>
           <td class="lastchecked">{{camper.lastUpdate | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+          <td class="refresh"><button class="btn btn-default" ng-click="refreshUser(camper.username)"><i class="glyphicon glyphicon-refresh"></i></button></td>
         </tr>
       </table>
       <p class="disclaimer">
