--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h5>Note: These are not realtime results</h5>
+      <h5>Note: These are not realtime results. Use the refresh button to synchronize your score.</h5>
       <h1 class="page-header">Top100:</h1>
       <table class="table table-striped table-bordered">
         <tr>
@@ -17,7 +17,7 @@
         </tr>
         <tr class="top100" ng-repeat="camper in campers">
           <td>{{$index+1}}</td>
-          <td><a name="{{camper.username}}" href="http://www.freecodecamp.com/{{camper.username}}"><img ng-src="{{camper.img}}" class="userimg"/>
+          <td><a href="http://www.freecodecamp.com/{{camper.username}}" target="_blank"><img ng-src="{{camper.img}}" class="userimg"/>
           <span class="user-name">{{camper.username}}</span></a></td>
           <td class="count">{{camper.total}}</td>
           <td class="count">{{camper.points}}</td>
@@ -41,6 +41,6 @@
 
 <footer class="footer">
   <div class="container">
-      <p>By <a href="http://www.freecodecamp.com/roelver">@roelver</a> | Updated: 10 oct 2015</p>
+      <p>*** By <a href="http://www.freecodecamp.com/roelver">@roelver</a> ***</p>
   </div>
 </footer>
