Modify disclaimer on top

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,8 +9,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h5>Note: These are not realtime results. Use the refresh button to synchronize your score.</h5>
-      <h1 class="page-header">Top100:</h1>
+      <h5>These results are not realtime. Use the refresh button to synchronize scores.</h5>
       <table class="table table-striped table-bordered">
         <tr>
           <th>#</th><th>Camper name</th><th>Total score</th><th>Points</th><th>Basejumps (x60)</th><th>Ziplines (x30)</th><th>Bonfires (x3)</th><th>Waypoints</th><th class="lastchecked">Last checked</th><th></th>
