--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,7 +9,8 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h5>These results are not realtime. Use the refresh button to synchronize scores.</h5>
+      <h2 ng-show="onRecentPage">Leaderboard over last 30 days activity</h2>
+      <h2 ng-hide="onRecentPage">All Time Leaderboard</h2>
       <table class="table table-striped table-bordered">
         <tr>
           <th>#</th><th>Camper name</th><th>Total score</th><th>Points</th><th>Basejumps (x60)</th><th>Ziplines (x30)</th><th>Bonfires (x3)</th><th>Waypoints</th><th class="lastchecked">Last checked</th><th></th>
@@ -18,20 +19,21 @@
           <td>{{$index+1}}</td>
           <td><a href="http://www.freecodecamp.com/{{camper.username}}" target="_blank"><img ng-src="{{camper.img}}" class="userimg"/>
           <span class="user-name">{{camper.username}}</span></a></td>
-          <td class="count">{{camper.total}}</td>
-          <td class="count">{{camper.points}}</td>
-          <td class="count">{{camper.basejumps}}</td>
-          <td class="count">{{camper.ziplines}}</td>
-          <td class="count">{{camper.bonfires}}</td>
-          <td class="count">{{camper.waypoints}}</td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.totalRecent}}</span><span ng-hide="onRecentPage">{{camper.total}}</span></td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.pointsRecent}}</span><span ng-hide="onRecentPage">{{camper.points}}</span></td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.basejumpsRecent}}</span><span ng-hide="onRecentPage">{{camper.basejumps}}</span></td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.ziplinesRecent}}</span><span ng-hide="onRecentPage">{{camper.ziplines}}</span></td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.bonfiresRecent}}</span><span ng-hide="onRecentPage">{{camper.bonfires}}</span></td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.waypointsRecent}}</span><span ng-hide="onRecentPage">{{camper.waypoints}}</span></td>
           <td class="lastchecked">{{camper.lastUpdate | date:'yyyy-MM-dd HH:mm:ss'}}</td>
           <td class="refresh"><button class="btn btn-default" ng-click="refreshUser(camper.username)"><i class="glyphicon glyphicon-refresh"></i></button></td>
         </tr>
       </table>
       <p class="disclaimer">
-          This list is assembled by taking a list of users from the <a href="https://gitter.im/FreeCodeCamp/FreeCodeCamp">FreeCodeCamp chat</a> and screen scraping the user's detail pages from the FreeCodeCamp site. This list is updated every couple of days. It is not a realtime presentation of user scores on FreeCodeCamp.com.<br/> 
+          This list is assembled by taking a list of users from the <a href="https://gitter.im/FreeCodeCamp/FreeCodeCamp">FreeCodeCamp chat</a> and screen scraping <span ng-show="onRecentPage">recent activity </span>from the user's detail pages from the FreeCodeCamp site. This list is updated every couple of days. It is not a realtime presentation of user scores on FreeCodeCamp.com.<br/> 
           The list is ordered by descending total score. This score is calculated as 
-          <em>Points + (Basejumps * 60) + (Ziplines * 30) + (Bonfires * 3)</em>.
+          <em>Points + (Basejumps * 60) + (Ziplines * 30) + (Bonfires * 3)</em>.<br/>
+          Take a look at the <span ng-show="onRecentPage"><a href="#" ng-click="getDataAlltime()">All Time Leaderboard</a></span><span ng-hide="onRecentPage"><a href="#" ng-click="getDataRecent()">Recent activity leaderboard</a></span>.
        </p>
 
     </div>
