--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,19 +1,33 @@
 
-<header class="hero-unit" id="banner">
-  <div class="container">
+<header class="header">
     <img class="fcclogo" src="https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg" alt="FreeCodeCamp logo">
-    <h1>(unofficial) Leaderboard</h1>
-  </div>
 </header>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h2 ng-show="onRecentPage">Leaderboard over last 30 days activity</h2>
-      <h2 ng-hide="onRecentPage">All Time Leaderboard</h2>
+      
       <table class="table table-striped table-bordered">
         <tr>
-          <th>#</th><th>Camper name</th><th>Total score</th><th>Points</th><th>Basejumps (x60)</th><th>Ziplines (x30)</th><th>Bonfires (x3)</th><th>Waypoints</th><th class="lastchecked">Last checked</th><th></th>
+        	<th id="header" colspan="10">
+        		<h3 ng-show="onRecentPage">(unofficial) Leaderboard over last 30 days activity</h3>
+      		<h3 ng-hide="onRecentPage">(unofficial) All Time Leaderboard</h3>
+      	</th>
+        </tr>
+        <tr>
+          <th>#</th>
+          <th>Camper name</th>
+          <th>Total score</th>
+          <th>Points</th>
+          <th>Basejumps (x60)</th>
+          <th>Ziplines (x30)</th>
+          <th>Bonfires (x3)</th>
+          <th>
+          	<span ng-show="onRecentPage">Overall total</span>
+          	<span ng-hide="onRecentPage">Recent score</span>
+          </th>
+          <th class="lastchecked">Last checked</th>
+          <th></th>
         </tr>
         <tr class="top100" ng-repeat="camper in campers">
           <td>{{$index+1}}</td>
@@ -24,17 +38,19 @@
           <td class="count"><span ng-show="onRecentPage">{{camper.basejumpsRecent}}</span><span ng-hide="onRecentPage">{{camper.basejumps}}</span></td>
           <td class="count"><span ng-show="onRecentPage">{{camper.ziplinesRecent}}</span><span ng-hide="onRecentPage">{{camper.ziplines}}</span></td>
           <td class="count"><span ng-show="onRecentPage">{{camper.bonfiresRecent}}</span><span ng-hide="onRecentPage">{{camper.bonfires}}</span></td>
-          <td class="count"><span ng-show="onRecentPage">{{camper.waypointsRecent}}</span><span ng-hide="onRecentPage">{{camper.waypoints}}</span></td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.total}}</span><span ng-hide="onRecentPage">{{camper.totalRecent}}</span></td>
           <td class="lastchecked">{{camper.lastUpdate | date:'yyyy-MM-dd HH:mm:ss'}}</td>
           <td class="refresh"><button class="btn btn-default" ng-click="refreshUser(camper.username)"><i class="glyphicon glyphicon-refresh"></i></button></td>
         </tr>
-      </table>
-      <p class="disclaimer">
+        <tr>
+          <td colspan="10">
           This list is assembled by taking a list of users from the <a href="https://gitter.im/FreeCodeCamp/FreeCodeCamp">FreeCodeCamp chat</a> and screen scraping <span ng-show="onRecentPage">recent activity </span>from the user's detail pages from the FreeCodeCamp site. This list is updated every couple of days. It is not a realtime presentation of user scores on FreeCodeCamp.com.<br/> 
           The list is ordered by descending total score. This score is calculated as 
           <em>Points + (Basejumps * 60) + (Ziplines * 30) + (Bonfires * 3)</em>.<br/>
           Take a look at the <span ng-show="onRecentPage"><a href="#" ng-click="getDataAlltime()">All Time Leaderboard</a></span><span ng-hide="onRecentPage"><a href="#" ng-click="getDataRecent()">Recent activity leaderboard</a></span>.
-       </p>
+          </td>
+        </tr>
+      </table>
 
     </div>
   </div>
