Link to FCC in header

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,6 @@
 
 <header class="header">
-    <img class="fcclogo" src="https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg" alt="FreeCodeCamp logo">
+    <a href="http://www.freecodecamp.com"><img class="fcclogo" src="https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg" alt="FreeCodeCamp logo"></a>
 </header>
 
 <div class="container">
