--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <title>Top 100 FreeCodeCamp users</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
