--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/satellizer/satellizer.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -57,6 +58,8 @@
           <!-- injector:js -->
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="components/auth/auth.service.js"></script>
+          <script src="components/auth/fccuser.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
