--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,8 +10,8 @@
       <table class="table table-striped table-bordered">
         <tr>
         	<th id="header" colspan="10">
-        		<h3 ng-show="onRecentPage">(unofficial) Leaderboard over last 30 days activity  <a href="#" class="small-link" ng-click="getDataAlltime()" ng-show="onRecentPage">(All Time leaderboard)</a></h3>
-      		<h3 ng-hide="onRecentPage">(unofficial) All Time Leaderboard <a href="#" class="small-link" ng-click="getDataRecent()" ng-hide="onRecentPage">(30 days leaderboard)</a></h3>
+        		<h3 ng-show="onRecentPage">(unofficial) Leaderboard over last 30 days activity</h3><a href="#" class="small-link" ng-click="getDataAlltime()" ng-show="onRecentPage">All Time leaderboard</a>
+      		<h3 ng-hide="onRecentPage">(unofficial) All Time Leaderboard</h3><a href="#" class="small-link" ng-click="getDataRecent()" ng-hide="onRecentPage">30 days leaderboard</a>
       	</th>
         </tr>
         <tr class="top100" ng-show="isLoggedIn()">
@@ -42,22 +42,75 @@
           <td class="lastchecked">{{singleUser.lastUpdate | date:'yyyy-MM-dd HH:mm:ss'}}</td>
           <td class="buttons"><button class="btn btn-default" ng-click="refreshUser(singleUser.username)"><i class="glyphicon glyphicon-refresh"></i></button></td>
         </tr>
-        <tr>
-          <th>#</th>
-          <th>Camper name</th>
-          <th>Total score</th>
-          <th>Points</th>
-          <th>Basejumps (x60)</th>
-          <th>Ziplines (x30)</th>
-          <th>Bonfires (x3)</th>
+
+        <tr ng-show="onRecentPage">
+          <th class="idcol">#</th>
           <th>
-          	<span ng-show="onRecentPage">Overall total</span>
-          	<span ng-hide="onRecentPage">Recent score</span>
+            <a href="" ng-click="order('username')">Camper Name</a>
+            <span class="sortorder" ng-show="predicate === 'username'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('totalRecent')">Recent score</a>
+            <span class="sortorder" ng-show="predicate === 'totalRecent'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('pointsRecent')">Points</a>
+            <span class="sortorder" ng-show="predicate === 'pointsRecent'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('basejumpsRecent')">Basejumps (x60)</a>
+            <span class="sortorder" ng-show="predicate === 'basejumpsRecent'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('ziplinesRecent')">Ziplines (x30)</a>
+            <span class="sortorder" ng-show="predicate === 'ziplinesRecent'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('bonfiresRecent')">Bonfires (x3)</a>
+            <span class="sortorder" ng-show="predicate === 'bonfiresRecent'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('total')">Overall score</a>
+            <span class="sortorder" ng-show="predicate === 'total'" ng-class="{reverse:reverse}"></span>
           </th>
           <th class="lastchecked">Last checked</th>
-          <th class="buttons"></th>
+          <th class="buttons" ng-class="isLoggedIn()"></th>
         </tr>
-        <tr class="top100" ng-repeat="camper in campers">
+
+        <tr ng-hide="onRecentPage">
+          <th class="idcol">#</th>
+          <th>
+            <a href="" ng-click="order('username')">Camper Name</a>
+            <span class="sortorder" ng-show="predicate === 'username'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('total')">Overall score</a>
+            <span class="sortorder" ng-show="predicate === 'total'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('points')">Points</a>
+            <span class="sortorder" ng-show="predicate === 'points'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('basejumps')">Basejumps (x60)</a>
+            <span class="sortorder" ng-show="predicate === 'basejumps'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('ziplines')">Ziplines (x30)</a>
+            <span class="sortorder" ng-show="predicate === 'ziplines'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('bonfires')">Bonfires (x3)</a>
+            <span class="sortorder" ng-show="predicate === 'bonfires'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="numbercol">
+            <a href="" ng-click="order('totalRecent')">Recent score</a>
+            <span class="sortorder" ng-show="predicate === 'totalRecent'" ng-class="{reverse:reverse}"></span>
+          </th>
+          <th class="lastchecked">Last checked</th>
+          <th class="buttons" ng-class="isLoggedIn()"></th>
+        </tr>
+        <tr class="top100" ng-repeat="camper in campers | orderBy:predicate:reverse | limitTo:100">
           <td>{{$index+1}}</td>
           <td><a href="http://www.freecodecamp.com/{{camper.username}}" target="_blank"><img ng-src="{{camper.img}}" class="userimg"/>
           <span class="user-name">{{camper.username}}</span></a></td>
@@ -68,7 +121,7 @@
           <td class="count"><span ng-show="onRecentPage">{{camper.bonfiresRecent}}</span><span ng-hide="onRecentPage">{{camper.bonfires}}</span></td>
           <td class="count"><span ng-show="onRecentPage">{{camper.total}}</span><span ng-hide="onRecentPage">{{camper.totalRecent}}</span></td>
           <td class="lastchecked">{{camper.lastUpdate | date:'yyyy-MM-dd HH:mm:ss'}}</td>
-          <td class="buttons">
+          <td class="buttons" ng-class="isLoggedIn()">
             <button class="btn btn-default" ng-click="refreshUser(camper.username)"><i class="glyphicon glyphicon-refresh"></i></button>
             <button class="btn btn-default" ng-show="isLoggedIn() && isNotFollowing(camper.username)" ng-click="followUser(camper.username)"><i class="glyphicon glyphicon-thumbs-up"></i></button>
             <button class="btn btn-default" ng-show="isLoggedIn() && isFollowing(camper.username)" ng-click="unfollowUser(camper.username)"><i class="glyphicon glyphicon-thumbs-down"></i></button>
@@ -83,7 +136,6 @@
           </td>
         </tr>
       </table>
-
     </div>
   </div>
 </div>
