--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -20,7 +20,7 @@
         </tr>
         <tr class="top100">
           <td colspan="10">
-          <div class="single"><span>Not listed below? Get your own ranking here: </span> <input type="text" placeholder="Username" ng-model="username"> <button class="btn rank-btn" ng-click="getUserRanking()">Get ranking</button> <button ng-show="isLoggedIn()" ng-click="followUser('input')" class="btn rank-btn">Follow</button></div>
+          <div class="single"><span>Not listed below? Get your own ranking here: </span> <input type="text" placeholder="Username" ng-model="username" ng-keypress="handleEnter($event)"> <button class="btn rank-btn" ng-click="getUserRanking()">Get ranking</button> <button ng-show="isLoggedIn()" ng-click="followUser('input')" class="btn rank-btn">Follow</button></div>
           </td>
         </tr>
         <tr ng-show="notFound" class="top100">
