--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
       
       <table class="table table-striped table-bordered">
         <tr>
@@ -61,7 +61,7 @@
             <span class="sortorder" ng-show="predicate === 'projectsRecent'" ng-class="{reverse:reverse}"></span>
           </th>
           <th class="numbercol">
-            <a href="" ng-click="order('algorithmsRecent')">Algorithms (x5)</a>
+            <a href="" ng-click="order('algorithmsRecent')">Algorithms + Challenges</a>
             <span class="sortorder" ng-show="predicate === 'algorithmsRecent'" ng-class="{reverse:reverse}"></span>
           </th>
           <th class="numbercol">
@@ -91,7 +91,7 @@
             <span class="sortorder" ng-show="predicate === 'projects'" ng-class="{reverse:reverse}"></span>
           </th>
           <th class="numbercol">
-            <a href="" ng-click="order('algorithms')">Algorithms (x5)</a>
+            <a href="" ng-click="order('algorithms')">Algorithms + Challenges</a>
             <span class="sortorder" ng-show="predicate === 'algorithms'" ng-class="{reverse:reverse}"></span>
           </th>
           <th class="numbercol">
@@ -108,7 +108,7 @@
           <td class="count"><span ng-show="onRecentPage">{{camper.totalRecent}}</span><span ng-hide="onRecentPage">{{camper.total}}</span></td>
           <td class="count"><span ng-show="onRecentPage">{{camper.pointsRecent}}</span><span ng-hide="onRecentPage">{{camper.points}}</span></td>
           <td class="count"><span ng-show="onRecentPage">{{camper.projectsRecent}}</span><span ng-hide="onRecentPage">{{camper.projects}}</span></td>
-          <td class="count"><span ng-show="onRecentPage">{{camper.algorithmsRecent}}</span><span ng-hide="onRecentPage">{{camper.algorithms}}</span></td>
+          <td class="count"><span ng-show="onRecentPage">{{camper.algorithmsRecent + camper.challengesRecent}}</span><span ng-hide="onRecentPage">{{camper.algorithms + camper.challenges}}</span></td>
           <td class="count"><span ng-show="onRecentPage">{{camper.total}}</span><span ng-hide="onRecentPage">{{camper.totalRecent}}</span></td>
           <td class="lastchecked">{{camper.lastUpdate | date:'yyyy-MM-dd HH:mm:ss'}}</td>
           <td class="buttons" ng-class="isLoggedIn()">
@@ -121,7 +121,7 @@
           <td colspan="10">
           This list is assembled by taking a list of users from the <a href="https://gitter.im/FreeCodeCamp/FreeCodeCamp">FreeCodeCamp chat</a> and screen scraping <span ng-show="onRecentPage">recent activity </span>from the user's detail pages from the FreeCodeCamp site. This list is updated every couple of days. It is not a realtime presentation of user scores on FreeCodeCamp.com.<br/> 
           The list is ordered by descending total score. This score is calculated as 
-          <em>Points + (projects * 50) + (algorithms * 5)</em>.<br/>
+          <em>Points + (projects * 50)</em>.<br/>
           Take a look at the <span ng-show="onRecentPage"><a href="#" ng-click="getDataAlltime()">All Time Leaderboard</a></span><span ng-hide="onRecentPage"><a href="#" ng-click="getDataRecent()">Recent activity leaderboard</a></span>.
           </td>
         </tr>
